# PiPER-Controller

./: .clangd  .gitignore  README.md  piper-start.sh  piper_test.py  test_service.sh
Log/: OrbbecSDK.log.txt
devel/: .catkin
devel/include/piper_msgs_srvs/: piper_cmd.h  piper_cmdRequest.h  piper_cmdResponse.h
devel/lib/piper_controller/: piper_controller
devel/lib/pkgconfig/: piper_controller.pc  piper_msgs_srvs.pc  serial_driver.pc
devel/share/piper_controller/cmake/: piper_controllerConfig.cmake
devel/share/piper_msgs_srvs/cmake/: piper_msgs_srvs-msg-paths.cmake  piper_msgs_srvsConfig.cmake
devel/share/serial_driver/cmake/: serial_driverConfig.cmake
hand-eye/: README.md  hand_eye_capture_gui.py  handeye_README.md  handeye_capture_gui.py  pipper_hand_eye.py
piper_controller/scripts/: zero.py
piper_controller/src/piper_controller/: CMakeLists.txt
piper_controller/src/piper_controller/src/: arm_controller.cpp  eef_cmd.cpp  eef_controller.cpp  test_node.cpp
piper_controller/src/piper_service/src/: piper_service.cpp
piper_controller/src/serial_driver/src/: serial_driver.cpp
piper_gui/scripts/: piper_gui.py
piper_ros/src/piper/scripts/: piper_ctrl_single_node.py
piper_ros/src/piper_description/urdf/: piper_description.urdf
piper_ros/src/piper_moveit/piper_with_gripper_moveit/: .setup_assistant
piper_tomato/: .gitignore  PiPER 机械臂接口文档.md  Piper机械臂服务器客户端接口文档.md
piper_tomato/piper_gui/: CMakeLists.txt  package.xml
piper_tomato/scripts/hand-eye/: .gitignore  hand_eye_capture_gui.py  pipper_hand_eye.py
piper_tomato/src/app/piper_gui/: CMakeLists.txt  package.xml
piper_tomato/src/app/piper_gui/scripts/: piper_gui.py
piper_tomato/src/app/piper_interface/: CMakeLists.txt  package.xml
piper_tomato/src/app/piper_task/: CMakeLists.txt  package.xml
piper_tomato/src/device/piper_camera/: CMakeLists.txt  package.xml
piper_tomato/src/piper_commander/: CMakeLists.txt  package.xml
piper_tomato/src/piper_commander/src/: cmd_dispatcher.cpp  piper_service.cpp  (+1 more)
piper_tomato/src/piper_controller/: CMakeLists.txt
piper_tomato/src/piper_gui/: CMakeLists.txt  package.xml
piper_tomato/src/piper_interface/: CMakeLists.txt  package.xml
piper_tomato/src/piper_msgs/: CMakeLists.txt  package.xml
piper_tomato/src/piper_msgs2/: CMakeLists.txt  package.xml
piper_tomato/src/piper_service/: CMakeLists.txt  package.xml
piper_tomato/src/serial_driver/: CMakeLists.txt
piper_tomato/src/service/piper_commander/: CMakeLists.txt  package.xml
piper_tomato/src/service/piper_commander/include/piper_commander/: cmd_dispatcher.hpp  tasks_manager.hpp
piper_tomato/src/service/piper_commander/src/: cmd_dispatcher.cpp  tasks_manager.cpp
ros_env/: README.md
scripts/: tomato_endpose.py
src/piper_controller/: CMakeLists.txt  package.xml
src/piper_controller/src/: eef_cmd.cpp
src/piper_msgs_srvs/srv/: piper_cmd.srv
src/serial_driver/: CMakeLists.txt
src/serial_driver/src/: serial_driver.cpp
(+94 files in other folders)
