<?xml version="1.0"?>
<package format="2">
    <name>piper_gui</name>
    <version>0.0.0</version>
    <description>The piper_gui package</description>

    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>actionlib</depend>
    <depend>std_msgs</depend>
    <depend>actionlib_msgs</depend>

    <depend>piper_msgs2</depend>

    <export>

    </export>
</package>
