<?xml version="1.0"?>
<package format="2">
    <name>piper_gui</name>
    <version>0.0.0</version>
    <description>The piper_gui package</description>

    <maintainer email="kaerei@foxmail.com">Kaede Rei</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>piper_msgs2</depend>

    <export/>
</package>
